# Brasiltransporta

./: .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  arvore_diretorios.txt  check_models.py  correção e melhoria de arquivos sug.txt  criar_bucket.py  docker-compose.ci.yml  docker-compose.yml  fix_script.py  fix_store_args.py  fix_tests.py  fix_use_case.py  gerador_arquivo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup-tests.ps1  store.json  temp.json
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
app/: pyproject.toml
application/advertisements/use_cases/: create_advertisement.py  get_advertisement_by_id.py  publish_advertisement.py
application/plans/use_cases/: create_plan.py  get_plan_by_id.py  (+1 more)
backend/app/: config.py
brasiltransporta/: __init__.py  main.py
brasiltransporta/domain/: errors.py
brasiltransporta/infrastructure/: dependencies.py
docker/: entrypoint.sh  fastapi.Dockerfile  wait_for_db.py  worker.Dockerfile
domain/entities/: advertisement.py  plan.py  transaction.py
domain/repositories/: advertisement_repository.py  plan_repository.py  transaction_repository.py
scripts/: authz_smoke.py  check_s3_connection.py  criar_bucket.py  setup.ps1  smoke_register_user.py  test-local.ps1  validate_jwt_env.py
tests/: __init__.py  conftest.py  test_advertisements.py  test_plans.py  test_transactions.py
tests/e2e/: test_authz_roles.py  test_users_api.py
tests/integration/: test_file_uploads.py
tests/unit/: test_get_user_use_cases.py  test_register_user_use_case.py
(+179 files in other folders)
