[tool.poetry]
name = "brasiltransporta"
version = "0.1.0"
description = "Projeto Brasiltransporta usando Poetry + Docker"
authors = ["Antonio Junior <seu-email@exemplo.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.12.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
redis = "^4.5.0"
celery = "^5.3.0"
email-validator = "^2.1.0"
boto3 = "^1.34.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.21"
httpx = "<0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

